# purchase_predict_api

./: .env  .gitignore  Dockerfile  app.py  cloudbuild.yaml  pyproject.toml
conf/: key.json
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: __init__.py  model.py
